--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "website for BKP NEPAl",
   "main": "index.js",
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./src/style.css -o ./public/css/style.css --watch"
+    "build": "npx tailwindcss -i ./src/style.css -o ./public/css/style.css --watch"
   },
   "keywords": [],
   "author": "",
